frontend/test/should_pass/retype_010.grg
using attrib_model_001;

rule r {
	pattern {
		x: Node;
		y: Node;
		
		x -e:EINT-> y;
		x -f:EBOOL-> y;
	}
	modify {
		x - ee:typeof(f)<e> -> y;
		x -f-> y;
	}
}
