frontend/test/should_fail/hom_010.grg
rule r {
	x:Node;
	y:Node;
	x -e:Edge-> y;
	x -f:UEdge- y;
	hom(e,f);
	modify {}
}

